# lattice

./: .gitignore  LATTICE_SPEC.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-pages.yml  release.yml
dist-installers/: Lattice_0.1.0_x64_en-US.msi  Lattice_0.2.0_arm64-release.apk.idsig  Lattice_0.2.0_x64_en-US.msi  Lattice_0.2.1_x64_en-US.msi
scripts/: android-app-build.gradle.kts  android-rust-shim.mjs  bootstrap.mjs  doctor.mjs  screenshot.mjs  setup-android-signing.mjs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make_icon.ps1
src-tauri/src/: main.rs
src/app/: App.tsx
src/data/: elements.ts  presets.ts
src/lib/: useMediaQuery.ts
src/lib/animation/: springs.ts
src/lib/crystal/: lattice.ts  types.ts
src/scene/: CrystalScene.tsx  Effects.tsx  Viewport.tsx
src/scene/primitives/: Atom.tsx  Bond.tsx  UnitCellWireframe.tsx
src/stores/: useScene.ts  useTheme.ts
src/styles/: index.css
src/ui/: HelpHint.tsx  LoadingScreen.tsx  Logo.tsx  MorphScrubber.tsx  SettingsDrawer.tsx  SidePanel.tsx  Sidebar.tsx  StructureSwitcher.tsx  TopBar.tsx  WindowHeader.tsx
