[package]
name = "lattice"
version = "0.1.0"
description = "Lattice — crystal structures in motion"
authors = ["Hasnain"]
edition = "2021"

[lib]
name = "lattice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
